--- a/index.html
+++ b/index.html
@@ -21,6 +21,76 @@
 
 
 	<!-- Place Your Code Here -->
+	  <!-- Room Search Form Start -->
+  <section>
+    <div class="container">
+      <div class="hotel">
+        <form class="" action="" method="post">
+          <div class="row">
+
+            <!-- Check In Date -->
+            <div class="col-2 form-group">
+              <div class="mb-3">
+                <i class="fa fa-calendar"><label for="">CHECK-IN</label></i>
+                 <input type="date" class="form-control"  name="checkIndate" placeholder="Check In">
+              </div>
+            </div>
+            <!-- Check Out Date -->
+            <div class="col-2 form-group">
+              <div class="mb-3">
+                <i class="fa fa-calendar"<label for=""><label for="">CHECK-OUT</label></i>
+                 <input type="date" class="form-control"  name="checkOutdate" placeholder="Check Out">
+              </div>
+            </div>
+
+            <!-- Guest Number -->
+            <div class="col-2 form-group">
+              <label for="">A GUEST</label>
+              <select id="inputState" class="form-select" name="guestNumber">
+                <option selected  value="1">1</option>
+                <option value="2">2</option>
+                <option value="3">3</option>
+                <option value="4">4</option>
+                <option value="5">5</option>
+                <option value="6">6</option>
+                <option value="7">7</option>
+                <option value="8">8</option>
+                <option value="9">9</option>
+              </select>
+            </div>
+
+            <!-- Children Number -->
+            <div class="col-2 form-group">
+              <label for="">A CHILDREN</label>
+              <select id="inputState" class="form-select" name="childrenNumber">
+                <option selected  value="1">1</option>
+                <option value="2">2</option>
+                <option value="3">3</option>
+                <option value="4">4</option>
+                <option value="5">5</option>
+                <option value="6">6</option>
+                <option value="7">7</option>
+                <option value="8">8</option>
+                <option value="9">9</option>
+              </select>
+            </div>
+
+            <!-- Check Avaibility -->
+           <div class="col-2 form-group">
+            <div class="mb-3">
+              <div class="input-group">
+                <input type="submit" name="search_hotel" class="btn btn-primary" value="Check Avaibility">
+              </div>
+            </div>
+          </div>
+
+
+        </div>
+      </form>
+      </div>
+    </div>
+  </section>
+<!-- Room Search Form End -->
 
 
 	<!-- Bootstrap Js File -->
