--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 
 
 	<!-- Place Your Code Here -->
-	  <!-- Room Search Form Start -->
+<!--Room Form Start -->
   <section>
     <div class="container">
       <div class="hotel">
@@ -45,7 +45,7 @@
 
             <!-- Guest Number -->
             <div class="col-2 form-group">
-              <label for="">A GUEST</label>
+              <i class="fa fa-user"><label for="">A GUEST</label></i>
               <select id="inputState" class="form-select" name="guestNumber">
                 <option selected  value="1">1</option>
                 <option value="2">2</option>
@@ -61,7 +61,7 @@
 
             <!-- Children Number -->
             <div class="col-2 form-group">
-              <label for="">A CHILDREN</label>
+              <i class="fa fa-child"><label for="">A CHILDREN</label></i>
               <select id="inputState" class="form-select" name="childrenNumber">
                 <option selected  value="1">1</option>
                 <option value="2">2</option>
@@ -76,21 +76,19 @@
             </div>
 
             <!-- Check Avaibility -->
-           <div class="col-2 form-group">
+          <div class="col-2 form-group">
             <div class="mb-3">
               <div class="input-group">
                 <input type="submit" name="search_hotel" class="btn btn-primary" value="Check Avaibility">
               </div>
             </div>
           </div>
-
-
         </div>
       </form>
       </div>
     </div>
   </section>
-<!-- Room Search Form End -->
+<!--Room Form End -->
 
 
 	<!-- Bootstrap Js File -->
