--- a/404.html
+++ b/404.html
@@ -23,7 +23,7 @@
                 <div class="col-lg-4 left-box-404">
 					<h1> Page <br>Not Found</h1>
 					<p>Lorem Ipsum is not simply random text. It has roots in a piece of classical Latin literature from 45 BC, making it over 2000 years old. </p>
-                    <a href="#" class="btn btn-primary send-msg-button2">Go Back</a>
+                    <a href="index.html" class="btn btn-primary send-msg-button2">Go Back</a>
                 </div>
                 <div class="col-lg-8">
                     <img src="img/404.jpg" alt="Page Not Found">
